# OpenJupy

./: .gitignore  ClaudeJupy_discovery.md  IMPLEMENTATION_PLAN.md  OpenCode-Jupyter-Integration-PRD.md  README.md  SETUP_INSTRUCTIONS.md  jupyter-mcp-server_discovery.md  prd.json  pyproject.toml  validate_jupyter_setup.py
agent-config/: data-scientist.json  opencode-mcp-snippet.json
src/openjupy/: __init__.py
src/openjupy/mappings/: __init__.py  error_fixes.py  packages.py
src/openjupy/middleware/: __init__.py  error_handler.py  response_wrapper.py
tests/: test_error_handler.py  test_integration.py  test_mappings.py  test_response_wrapper.py
